--- a/editor/static/css/Menu.css
+++ b/editor/static/css/Menu.css
@@ -1,5 +1,5 @@
 #cssmenu ul {
-    margin: 24px 24px 0 24px;
+    margin: 24px;
     padding: 7px 6px 0;
     background: #888888 url(images/overlay.png) repeat-x 0 -110px;
     line-height: 100%;
